@@ -315,6 +315,7 @@ let features =
     ];
     "POLL", L[ I "poll.h"; S "poll"; D "POLLIN"; D "POLLOUT"; Z "POLLRDHUP" ];
     "SYSINFO", L[ I"sys/sysinfo.h"; S"sysinfo"; F ("sysinfo","mem_unit")];
+    "MCHECK", L[ I"mcheck.h"; S"mtrace"; S"muntrace" ];
   ]
 
 let () = 
